2004-04-09  Marcus Brinkmann  <marcus@gnu.org>

	* types.h (hurd_cap_make): Use bit-wise OR, not logical OR.

2004-04-07  Marcus Brinkmann  <marcus@gnu.org>

	* types.h (hurd_cap_make): New function.
	(_HURD_CAP_CLIENT_ID_MASK, _HURD_CAP_ID_MASK): New macros.

2004-04-01  Marcus Brinkmann  <marcus@gnu.org>

	* types.h: Include <l4/thread.h>.

2004-03-25  Marcus Brinkmann  <marcus@gnu.org>

	* types.h: Protect inclusion with _HURD_TYPES_H.

2004-03-22  Marcus Brinkmann  <marcus@gnu.org>

	* Makefile.am: New file.
	* headers.m4: New file.
	* types.h: New file.	