@@ -1,5 +1,8 @@
 2004-04-09  Marcus Brinkmann  <marcus@gnu.org>
 
+	* types.h (hurd_cap_t): Rename to ...
+	(hurd_cap_handle_t): ... this.  Likewise for all users.
+
 	* types.h (hurd_cap_make): Use bit-wise OR, not logical OR.
 
 2004-04-07  Marcus Brinkmann  <marcus@gnu.org>
